# sympulse-code-standards

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  pytest.ini
docs/: CLI_ARCHITECTURE.md  QUICKSTART.md  VERSION_MANAGEMENT.md
examples/: version_update_demo.py
scripts/: update_versions.py
src/: __init__.py  core.py  generators.py  versions.toml
src/cli/: __init__.py  __main__.py  prompts.py
src/cli/commands/: __init__.py  audit.py  base.py  init.py  list_standards.py  show_standard.py  update.py  validate.py
src/cli/commands/admin/: __init__.py  versions.py
src/cli/commands/project/: __init__.py  audit.py  init.py  update.py  validate.py
src/cli/commands/standards/: __init__.py  list.py  show.py
src/cli/commands/tools/: __init__.py  format_code.py  lint_code.py
src/lib/: version_manager.py
src/standards/: config.toml
src/standards/python/: config.toml  metadata.json
src/standards/typescript/: config.toml  metadata.json  rules.yaml
src/templates/common/: .gitmessage.j2  CODE_OF_CONDUCT.md.j2  CONTRIBUTING.md.j2
src/templates/common/.github/: PULL_REQUEST_TEMPLATE.md.j2
src/templates/common/.github/ISSUE_TEMPLATE/: bug_report.md.j2  feature_request.md.j2
src/templates/python/default/: template.yaml
src/templates/python/default/files/: .pre-commit-config.yaml  README.md  pyproject.toml
src/templates/python/default/files/.github/workflows/: ci.yml
src/templates/typescript/default/: template.yaml
src/templates/typescript/default/files/: package.json  tsconfig.json
src/templates/typescript/default/files/.github/workflows/: ci.yml
sympulse_coding_standards/: __init__.py  cli.py  core.py  generators.py  validators.py
sympulse_coding_standards/standards/: config.toml
sympulse_coding_standards/standards/python/: config.toml  metadata.json  rules.yaml
sympulse_coding_standards/standards/typescript/: config.toml  metadata.json  rules.yaml
sympulse_coding_standards/templates/python/default/files/: .pre-commit-config.yaml  README.md  pyproject.toml
sympulse_coding_standards/templates/python/default/files/.github/workflows/: ci.yml
sympulse_coding_standards/templates/typescript/default/files/: package.json  tsconfig.json
sympulse_coding_standards/templates/typescript/default/files/.github/workflows/: ci.yml
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_core.py  utils.py
tests/integration/: __init__.py  test_pre_commit_config.py  test_project_init_integration.py
tests/unit/: __init__.py  test_core.py  test_generators.py  test_init_command.py  test_prompts.py  test_version_manager.py
