[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sympulse-coding-standards"
version = "0.2.0"
description = "Portable coding standards and project scaffolding for Sympulse team"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Petr Čala", email = "petr.cala@sympulse.cz" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
  "click>=8.0.0",
  "jinja2>=3.0.0",
  "pyyaml>=6.0",
  "rich>=13.0.0",
  "gitpython>=3.1.0",
  "pathspec>=0.11.0",
  "toml>=0.10.0",
  "pydantic>=2.0.0",
  "typer>=0.9.0",
  "cookiecutter>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0",
]

[project.scripts]
scs = "sympulse_coding_standards.cli:main"

[project.urls]
Homepage = "https://github.com/sympulse/sympulse-coding-standards"
Repository = "https://github.com/sympulse/sympulse-coding-standards"
Documentation = "https://github.com/sympulse/sympulse-coding-standards#readme"

[tool.hatch.build.targets.wheel]
packages = ["sympulse_coding_standards"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["sympulse_coding_standards"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=sympulse_coding_standards --cov-report=term-missing --cov-report=html"
